kubernetes/nginx/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: platform-applications
  labels:
    app.kubernetes.io/name: platform-applications
    app.kubernetes.io/part-of: enterprise-platform
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
