kubernetes/nginx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: enterprise-nginx
  namespace: platform-applications
  labels:
    app.kubernetes.io/name: enterprise-nginx
    app.kubernetes.io/component: web
    app.kubernetes.io/part-of: enterprise-platform
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
    service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
    service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled: "true"
spec:
  type: LoadBalancer
  externalTrafficPolicy: Cluster
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: enterprise-nginx
